[metadata]
name = hvox
summary = Python reference implementation of the HVOX gridder for mesh-agnostic wide-field interferometry.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Matthieu SIMEONI, Sepand KASHANI, Joan RUE-QUERALT
author_email = matthieu.simeoni@gmail.com
url = https://github.com/matthieumeo/hvox
download_url = https://github.com/matthieumeo/hvox
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	'Programming Language :: Python :: 3',
  	'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
	Programming Language :: Python :: Implementation :: CPython,
	Topic :: Scientific/Engineering,
	Framework :: Pycsou
license = MIT

[options]
package_dir =
	= src/
packages =
	hvox
	hvox_tests
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	pycsou @ git+https://github.com/matthieumeo/pycsou@v2-dev#egg=pycsou

[options.extras_require]
full =
	rascil
    healpy

dev =
	sphinx == 2.1.*
	sphinx-rtd-theme == 1.1.*, < 2
	jinja2 < 3.1
	pytest >= 7.1, < 8
